data/collection/fixes/descriptions/scala/scala-9491
Given a nested type {code}trait Compiler { trait Config }{code} I expect this to work similar to a method:
```scala
class F(val c: Compiler)(val conf: c.Config)
```
but this produces an error (with a rather surprising message):
```scala
<console>:8: error: not found: value c
       class F(val c: Compiler)(val conf: c.Config)
                                          ^
```
